# omptlikwid

./: CMakeLists.txt  README.md
App/: simpleTest.c
OmptLikwid/: CMakeLists.txt  mytool.c
cmake/: FindLikwid.cmake
